# gtest-catch2-evaluation-01

./: CMakeLists.txt
include/: my_class.h
src/: main.cc  my_class.cc
tests/: catch2_main.cc  catch2_tests.cc  gtest_tests.cc  tests.cc
